# Rational_class

./: CMakeLists.txt  Rational.h  main.cpp  matrix.h
